# openGLLearn

./: CMakeLists.txt
libraries/glad/: glad.c  glad.h
resources/shaders/: fragment.fs  lightFragment.fs  lightVertex.vs  vertex.vs
source/: CAMERA.h  SHADER.cpp  SHADER.h  TEXTURE.cpp  TEXTURE.h  main.cpp
